--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/kandikaprima/Bookshelf-API-Dicoding#readme",
   "dependencies": {
-    "@hapi/hapi": "^21.4.0"
+    "@hapi/hapi": "^21.4.0",
+    "nanoid": "^3.3.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
