--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "nanoid": "^3.3.11"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "eslint": "^9.29.0",
     "eslint-config-dicodingacademy": "^0.9.4",
+    "globals": "^16.2.0",
     "nodemon": "^3.1.10"
   }
 }
